tests/snapshots/compile__wgsl_effect_edgedetection_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn edgedetection1_output(uv: vec2f) -> vec4f {
    var KX = mat3x3f(-1.0, -2.0, -1.0, 0.0, 0.0, 0.0, 1.0, 2.0, 1.0);
    var KY = mat3x3f(-1.0, 0.0, 1.0, -2.0, 0.0, 2.0, -1.0, 0.0, 1.0);
    var KL = mat3x3f(0.0, 1.0, 0.0, 1.0, -4.0, 1.0, 0.0, 1.0, 0.0);
    let kernelStep = vec2f(vignette5_mask(uv)) / 720.0;

    var gx = vec3f(0.0);
    var gy = vec3f(0.0);
    var lap = vec3f(0.0);
    var gxGray = 0.0;
    var gyGray = 0.0;
    var lapGray = 0.0;
    var centerAlpha = 1.0;

    for (var i = -1; i <= 1; i++) {
        for (var j = -1; j <= 1; j++) {
            let uv_offset = uv + vec2f(f32(i), f32(j)) * kernelStep;
            let sampled = unpremultiply(checkerboard3_output(uv_offset));
            if (i == 0 && j == 0) { centerAlpha = sampled.a; }

            let wx = KX[i + 1][j + 1];
            let wy = KY[i + 1][j + 1];
            let wl = KL[i + 1][j + 1];
            let gray = dot(sampled.rgb, vec3f(0.299, 0.587, 0.114));

            gx += sampled.rgb * wx;
            gy += sampled.rgb * wy;
            lap += sampled.rgb * wl;
            gxGray += gray * wx;
            gyGray += gray * wy;
            lapGray += gray * wl;
        }
    }

    let edge = sqrt(gx * gx + gy * gy);
    return premultiply(vec4f(clamp(edge * (vignette4_mask(uv)), vec3f(0.0), vec3f(1.0)), centerAlpha));
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return edgedetection1_output(uv);
}
