tests/snapshots/compile__wgsl_effect_emboss_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_emboss1_angle: f32,
    u_control_emboss1_offset: f32,
    u_control_emboss1_strength: f32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn emboss1_output(uv: vec2f) -> vec4f {
    let angle = (u.u_control_emboss1_angle) * 2.0 * PI;
    let lightDir = vec2f(cos(angle), sin(angle)) * 2.0 / 720.0;
    var lum: array<f32, 3>;
    var alpha = 1.0;
    for (var k = -1; k <= 1; k++) {
        let offset = lightDir * f32(k);
        let sampled = defaultUvMap(uv + offset);
        if (k == 0) { alpha = sampled.a; }
        lum[k + 1] = dot(sampled.rgb, vec3f(0.299, 0.587, 0.114));
    }
    let relief = (lum[2] - lum[0]) * (u.u_control_emboss1_strength);
    return vec4f(vec3f(clamp(relief + (u.u_control_emboss1_offset), 0.0, 1.0)), alpha);
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return emboss1_output(uv);
}
