tests/snapshots/compile__wgsl_effect_erode_connected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_checkerboard3_color1: vec4f,
    u_control_checkerboard3_color2: vec4f,
    u_control_checkerboard3_frequency: f32,
    u_control_mix8_amount: f32,
    u_control_rgba7_a: f32,
    u_control_rgba7_b: f32,
    u_control_rgba7_g: f32,
    u_control_vignette4_radius: f32,
    u_control_vignette4_softness: f32,
    u_control_vignette5_radius: f32,
    u_control_vignette5_softness: f32,
    u_control_vignette6_radius: f32,
    u_control_vignette6_softness: f32,
    u_opt_mix8_curve: i32,
    u_opt_mix8_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn checkerboard3_output(uv: vec2f) -> vec4f {
    let frequency = u.u_control_checkerboard3_frequency;
    let scaled_uv = uv * (frequency / 2.0);
    let grid = floor(scaled_uv);
    let checker = floor_mod(grid.x + grid.y, 2.0);
    let c1 = u.u_control_checkerboard3_color1;
    let c2 = u.u_control_checkerboard3_color2;
    return mix(c1, c2, checker);
}

fn vignette4_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette4_radius;
    let softness = max(u.u_control_vignette4_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette5_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette5_radius;
    let softness = max(u.u_control_vignette5_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn vignette6_mask(uv: vec2f) -> f32 {
    let radius = u.u_control_vignette6_radius;
    let softness = max(u.u_control_vignette6_softness, 1e-4);
    let mask = 1.0 - smoothstep(radius - softness, radius + softness, length(uv));
    return mask;
}

fn erode1_color(uv: vec2f) -> vec4f {
    let radius = vignette4_mask(uv);
    var offset = vec2f(0.0);
    let original = checkerboard3_output(uv + offset);
    var winner = original;
    var best = dot(original.rgb, vec3f(0.299, 0.587, 0.114));
    for (var y = -1; y <= 1; y++) {
        for (var x = -1; x <= 1; x++) {
            if (abs(f32(x)) + abs(f32(y)) > 1.0) { continue; }
            offset = vec2f(f32(x), f32(y)) * radius;
            let sampled = checkerboard3_output(uv + offset);
            let brightness = dot(sampled.rgb, vec3f(0.299, 0.587, 0.114));
            if (brightness < best) { best = brightness; winner = sampled; }
        }
    }
    let moved = dot(original.rgb, vec3f(0.299, 0.587, 0.114)) - best;
    let take = step(vignette5_mask(uv), moved) * clamp(vignette6_mask(uv), 0.0, 1.0);
    return mix(original, winner, take);
}

fn erode1_value(uv: vec2f) -> f32 {
    let radius = vignette4_mask(uv);
    var offset = vec2f(0.0);
    let original = checkerboard3_output(uv + offset);
    var winner = original;
    var best = dot(original.rgb, vec3f(0.299, 0.587, 0.114));
    for (var y = -1; y <= 1; y++) {
        for (var x = -1; x <= 1; x++) {
            if (abs(f32(x)) + abs(f32(y)) > 1.0) { continue; }
            offset = vec2f(f32(x), f32(y)) * radius;
            let sampled = checkerboard3_output(uv + offset);
            let brightness = dot(sampled.rgb, vec3f(0.299, 0.587, 0.114));
            if (brightness < best) { best = brightness; winner = sampled; }
        }
    }
    return clamp(best, 0.0, 1.0);
}

fn rgba7_output(uv: vec2f) -> vec4f {
    return premultiply(vec4f(erode1_value(uv), u.u_control_rgba7_g, u.u_control_rgba7_b, u.u_control_rgba7_a));
}

fn mix8_output(uv: vec2f) -> vec4f {
    let a = erode1_color(uv);
    let b = rgba7_output(uv);
    let amt = clamp(u.u_control_mix8_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix8_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix8_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix8_output(uv);
}
