tests/snapshots/compile__wgsl_effect_glitch_unconnected.snap
---
source: tests/compile.rs
expression: wgsl
---

struct Uniforms {
    u_resolution: vec2f,
    u_time: f32,
    u_control_glitch1_blockSize: f32,
    u_control_glitch1_intensity: f32,
    u_control_glitch1_rgbSplit: f32,
    u_control_glitch1_shift: f32,
    u_control_glitch1_step: f32,
    u_control_mix4_amount: f32,
    u_control_rgba3_a: f32,
    u_control_rgba3_b: f32,
    u_control_rgba3_g: f32,
    u_opt_mix4_curve: i32,
    u_opt_mix4_method: i32,
}
@group(0) @binding(0) var<uniform> u: Uniforms;

fn glitchBlock(coord: f32, blockSize: f32, stepIndex: f32) -> f32 {
    let coarse = floor(coord / (blockSize * 4.0));
    let scale = fract(sin(coarse * 127.1 + stepIndex * 0.37) * 43758.5453);
    if (scale < 0.3) {
        return coarse;
    }
    if (scale < 0.65) {
        return floor(coord / (blockSize * 2.0)) + 10000.0;
    }
    return floor(coord / blockSize) + 20000.0;
}

fn glitch1_color(uv: vec2f) -> vec4f {
    let blockSize = max(u.u_control_glitch1_blockSize, 1e-4);
    let stepIndex = floor(u.u_control_glitch1_step);
    let intensity = u.u_control_glitch1_intensity;
    let blockCoord = glitchBlock(uv.y, blockSize, stepIndex);
    let blockRand = fract(sin(dot(vec2f(blockCoord, stepIndex), vec2f(12.9898, 78.233))) * 43758.5453);
    let mask = 1.0 - step(intensity, blockRand);
    var glitchUV = uv;
    if (mask < 0.5) {
        return defaultUvMap(glitchUV);
    }
    let shiftAmt = (fract(sin(dot(vec2f(blockCoord * 3.17, stepIndex * 1.71), vec2f(45.233, 94.117))) * 23421.631) - 0.5) * u.u_control_glitch1_shift;
    let shiftedUV = uv + vec2f(shiftAmt, 0.0);
    let splitRand = fract(sin(dot(vec2f(blockCoord * 7.31, stepIndex * 2.13), vec2f(67.891, 12.345))) * 54321.987);
    let splitOffset = vec2f(splitRand * (u.u_control_glitch1_rgbSplit), 0.0);
    glitchUV = shiftedUV;
    let center = defaultUvMap(glitchUV);
    glitchUV = shiftedUV + splitOffset;
    let r = (defaultUvMap(glitchUV)).r;
    glitchUV = shiftedUV - splitOffset;
    let b = (defaultUvMap(glitchUV)).b;
    return vec4f(r, center.g, b, center.a);
}

fn glitch1_mask(uv: vec2f) -> f32 {
    let blockSize = max(u.u_control_glitch1_blockSize, 1e-4);
    let stepIndex = floor(u.u_control_glitch1_step);
    let intensity = u.u_control_glitch1_intensity;
    let blockCoord = glitchBlock(uv.y, blockSize, stepIndex);
    let blockRand = fract(sin(dot(vec2f(blockCoord, stepIndex), vec2f(12.9898, 78.233))) * 43758.5453);
    let mask = 1.0 - step(intensity, blockRand);
    return mask;
}

fn rgba3_output(uv: vec2f) -> vec4f {
    return vec4f(glitch1_mask(uv), u.u_control_rgba3_g, u.u_control_rgba3_b, u.u_control_rgba3_a);
}

fn mix4_output(uv: vec2f) -> vec4f {
    let a = glitch1_color(uv);
    let b = rgba3_output(uv);
    let amt = clamp(u.u_control_mix4_amount, 0.0, 1.0);
    let f = select(
        amt,
        clamp(0.5 + 0.5 * tan(clamp(2.0 * amt - 1.0, -0.999, 0.999) * 1.5707963), 0.0, 1.0),
        u.u_opt_mix4_curve == 1);
    let lum = dot(a.rgb, vec3f(0.299, 0.587, 0.114));
    let m = u.u_opt_mix4_method;
    if (m == 1) {
        return select(a, b, lum < f);
    } else if (m == 2) {
        return select(a, b, lum > 1.0 - f);
    } else {
        return mix(a, b, f);
    }
}

@fragment
fn fs_main(@builtin(position) frag_coord: vec4f) -> @location(0) vec4f {
    let screenUV = frag_coord.xy / u.u_resolution;
    let aspectRatio = u.u_resolution.x / u.u_resolution.y;
    let uv = vec2f((2.0 * screenUV.x - 1.0) * aspectRatio, 2.0 * screenUV.y - 1.0);
    return mix4_output(uv);
}
